# co2-meter-rs

./: .gitignore  Cargo.toml  Readme.md  justfile
src/: broadcast.rs  broadcast_channel.rs  datastore.rs  http.rs  log_debug.rs  main.rs  mqtt.rs
src/sensor/: mod.rs
src/sensor/mh_z19/: mock.rs  mod.rs  real.rs
systemd/: co2-meter.service
